2010-07-15  Werner Koch  <wk@g10code.com>

	* t-cms-parser.c (dummy_writer_cb): New.
	(one_file): Use the dummy writer.

2010-01-22  Werner Koch  <wk@g10code.com>

	* cert-basic.c (getenv) [__MINGW32CE__]: Add dummy.
	(one_file): Use binary flag for fopen.

2008-10-30  Werner Koch  <wk@g10code.com>

	* t-cms-parser.c (dummy_hash_fnc): Mark unused args.
	* t-ocsp.c (my_hash_buffer): Ditto.

2007-12-13  Werner Koch  <wk@g10code.com>

	* t-cms-parser.c (one_file): Print the value of the signature.

2007-08-08  Werner Koch  <wk@g10code.com>

	* t-common.h (print_sexp_hex): New.

2007-07-04  Werner Koch  <wk@g10code.com>

	Changed license to GPLv3.

2007-04-20  Werner Koch  <wk@g10code.com>

	* cert-basic.c (main): Add option verbose
	(one_file): Print public key and signature value in verbose mode.

2006-08-31  Werner Koch  <wk@g10code.com>

	* t-ocsp.c (one_response): Print the responder id.
	(one_response): Print extension info.
	(get_oid_desc): New.

2006-08-30  Werner Koch  <wk@g10code.com>

	* t-ocsp.c (one_response): Build the test request with the same nonce.

2006-08-01  Werner Koch  <wk@g10code.com>

	* Makefile.am (TESTS): Add t-dnparser.

	* t-dnparser.c (test_0): New.  We need this good case test.

2006-07-03  Werner Koch  <wk@g10code.com>

	* t-dnparser.c: Use ksba_dn_str2der isntead of internal functions.
	(test_1): Also test ksba_dn_test_str.
	(test_2): New.

2005-04-19  Werner Koch  <wk@g10code.com>

	* t-ocsp.c (main): Add option --no-nonce.  Ret rid of the
	libgcrypt requirement.
	(one_request): Create a nonce.
	* sha1.c: New.

2005-04-18  Werner Koch  <wk@g10code.com>

	* t-crl-parser.c (one_file): Print extension name if possible.

	* Makefile.am (oidtranstbl.h): Debian install dumpasn1.cfg at
	/etc/dumpasn1; try this too.

2005-04-15  Werner Koch  <wk@g10code.com>

	* cert-basic.c (list_extensions): Print the AKI.keyIdentifier and
	the subjectKeyIdentifier.
	* t-crl-parser.c (one_file): Print the AKI.keyIdentifier.
